syntax = "proto3";

package resource;

option go_package = "github.com/yi-nology/rainbow_bridge/biz/model/api/resourcepb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message ResourceConfig {
  string resource_key = 1;
  string alias = 2;
  string name = 3;
  string business_key = 5;
  string content = 6;
  string type = 7;
  string remark = 8;
  bool is_perm = 9;
  reserved 4, 10;
  reserved "version", "updated_by";
}

message FileAsset {
  string file_id = 1;
  string business_key = 2;
  string file_name = 3;
  string content_type = 4;
  int64 file_size = 5;
  string url = 6;
  string remark = 7;
}

message OperateResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
  ResourceConfig config = 4;
  FileAsset asset = 5;
}

message CreateOrUpdateConfigRequest {
  ResourceConfig config = 1;
}

message ResourceDetailRequest {
  string business_key = 1;
  string resource_key = 2;
}

message ResourceQueryRequest {
  string business_key = 1;
  string type = 2;
  string min_version = 3;
  string max_version = 4;
  bool is_latest = 5;
}

message ResourceDeleteRequest {
  string business_key = 1;
  string resource_key = 2;
}

message ResourceImportRequest {
  repeated ResourceConfig configs = 1;
  bool overwrite = 2;
}

message ResourceExportRequest {
  string business_key = 1;
  bool include_system = 2;
}

message ResourceListResponse {
  repeated ResourceConfig list = 1;
}

message ResourceDetailResponse {
  ResourceConfig detail = 1;
}

message SystemResourceResponse {
  map<string, string> base = 1;
  string md5 = 2;
}

message BusinessKeyListResponse {
  repeated string list = 1;
}

message FileAssetQueryRequest {
  string business_key = 1;
}

message FileAssetListResponse {
  repeated FileAsset assets = 1;
}

message Empty {}

service ResourceService {
  rpc AddConfig(CreateOrUpdateConfigRequest) returns (OperateResponse) {
    option (google.api.http) = {
      post: "/api/v1/resources"
      body: "*"
    };
  }

  rpc UpdateConfig(CreateOrUpdateConfigRequest) returns (OperateResponse) {
    option (google.api.http) = {
      put: "/api/v1/resources"
      body: "*"
    };
  }

  rpc DeleteConfig(ResourceDeleteRequest) returns (OperateResponse) {
    option (google.api.http) = {
      delete: "/api/v1/resources"
      body: "*"
    };
  }

  rpc ListConfigs(ResourceQueryRequest) returns (ResourceListResponse) {
    option (google.api.http) = {
      get: "/api/v1/resources"
    };
  }

  rpc GetConfigDetail(ResourceDetailRequest) returns (ResourceDetailResponse) {
    option (google.api.http) = {
      get: "/api/v1/resources/detail"
    };
  }

  rpc ImportConfigs(ResourceImportRequest) returns (OperateResponse) {
    option (google.api.http) = {
      post: "/api/v1/resources/import"
      body: "*"
    };
  }

  rpc ExportConfigs(ResourceExportRequest) returns (ResourceListResponse) {
    option (google.api.http) = {
      get: "/api/v1/resources/export"
    };
  }

  rpc ListBusinessKeys(google.protobuf.Empty) returns (BusinessKeyListResponse) {
    option (google.api.http) = {
      get: "/api/v1/resources/business-keys"
    };
  }

  rpc ListSystemConfigs(google.protobuf.Empty) returns (SystemResourceResponse) {
    option (google.api.http) = {
      get: "/api/v1/resources/system"
    };
  }

  rpc ListAssets(FileAssetQueryRequest) returns (FileAssetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/assets"
    };
  }
}
